--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="reveal">
                     <h2 class="text-3xl sm:text-4xl font-bold tracking-tight text-slate-900">Our Story is Simple: We Get It.</h2>
                     <p class="mt-6 text-lg text-slate-600">As students, we were tired of the choice between overpriced notebooks and flimsy paper that couldn't handle a simple gel pen. We knew there had to be a better way.</p>
-                    <p class="mt-4 text-lg text-slate-600">So, we created Prime Faster. Our mission is to provide fellow students with premium, durable, and inspiring notebooks at a price that makes sense. We believe you shouldn't have to compromise on the tools you need to succeed.</p>
+                    <p class="mt-4 text-lg text-slate-600">So, we provided Prime Faster. Our mission is to provide fellow students with premium, durable, and inspiring notebooks at a price that makes sense. We believe you shouldn't have to compromise on the tools you need to succeed.</p>
                     <div class="mt-10 grid grid-cols-2 gap-8 text-center">
                         <div>
                             <span id="students-counter" class="text-4xl font-bold text-blue-600">10</span>+
@@ -537,3 +537,4 @@
 </body>
 
 </html>
+
